/*
Â© 2025 Sharon Aicler (saichler@gmail.com)

Layer 8 Ecosystem is licensed under the Apache License, Version 2.0.
You may obtain a copy of the License at:

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/
syntax = "proto3";

package sales;

option go_package = "./types/sales";

import "sales-common.proto";
import "erp-common.proto";
import "api.proto";

// ============================================================================
// CUSTOMER MANAGEMENT MESSAGES
// ============================================================================

// @PrimeObject
// SalesCustomerHierarchy represents a hierarchical grouping of customers
message SalesCustomerHierarchy {
  string hierarchy_id = 1;
  string name = 2;
  string description = 3;
  string parent_hierarchy_id = 4;
  int32 level = 5;
  repeated string customer_ids = 6;     // Cross-ref: FIN Customer
  bool is_active = 7;
  map<string, string> custom_fields = 8;
  erp.AuditInfo audit_info = 9;
}

message SalesCustomerHierarchyList {
  repeated SalesCustomerHierarchy list = 1;
  l8api.L8MetaData metadata = 2;
}

// @PrimeObject
// SalesCustomerSegment represents a market segment for customer classification
message SalesCustomerSegment {
  string segment_id = 1;
  string name = 2;
  string description = 3;
  SalesSegmentType segment_type = 4;
  string criteria = 5;
  int32 customer_count = 6;
  bool is_active = 7;
  map<string, string> custom_fields = 8;
  erp.AuditInfo audit_info = 9;
}

message SalesCustomerSegmentList {
  repeated SalesCustomerSegment list = 1;
  l8api.L8MetaData metadata = 2;
}

// @PrimeObject
// SalesCustomerContract represents a sales contract with a customer
message SalesCustomerContract {
  string contract_id = 1;
  string contract_number = 2;
  string customer_id = 3;               // Cross-ref: FIN Customer
  string name = 4;
  SalesContractStatus status = 5;
  int64 start_date = 6;
  int64 end_date = 7;
  erp.Money contract_value = 8;
  string price_list_id = 9;
  string payment_terms = 10;
  string terms_and_conditions = 11;
  string salesperson_id = 12;           // Cross-ref: HCM Employee
  bool auto_renew = 13;
  int32 renewal_notice_days = 14;
  map<string, string> custom_fields = 15;
  erp.AuditInfo audit_info = 16;
}

message SalesCustomerContractList {
  repeated SalesCustomerContract list = 1;
  l8api.L8MetaData metadata = 2;
}

// @PrimeObject
// SalesPartnerChannel represents a sales partner or distribution channel
message SalesPartnerChannel {
  string partner_id = 1;
  string name = 2;
  SalesPartnerType partner_type = 3;
  string contact_name = 4;
  string email = 5;
  string phone = 6;
  erp.Address address = 7;
  double commission_rate = 8;
  string territory_id = 9;
  bool is_active = 10;
  int64 start_date = 11;
  int64 end_date = 12;
  string notes = 13;
  map<string, string> custom_fields = 14;
  erp.AuditInfo audit_info = 15;
}

message SalesPartnerChannelList {
  repeated SalesPartnerChannel list = 1;
  l8api.L8MetaData metadata = 2;
}
